--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
       <button id="cow-button">KO</button>
       <audio
         id="cow-sound"
-        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/mixkit-multiple-moo-in-the-barn-1750.wav?v=1736845048088"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/cow-sound-2.wav?v=1737033738120"
         preload="auto"
       ></audio>
 
       <button id="pig-button">GRIS</button>
-      <audio id="pig-sound" src="" preload="auto"></audio>
+      <audio id="pig-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/pig-sound-1.wav?v=1737032286351" preload="auto"></audio>
 
       <button id="horse-button">HÄST</button>
-      <audio id="horse-sound" src="" preload="auto"></audio>
+      <audio id="horse-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/horse-sound-1.wav?v=1737033494558" preload="auto"></audio>
 
       <button id="chicken-button">HÖNA</button>
-      <audio id="chicken-sound" src="" preload="auto"></audio>
+      <audio id="chicken-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/chicken-sound-1.wav?v=1737033497062" preload="auto"></audio>
 
       <button id="cat-button">KATT</button>
-      <audio id="cat-sound" src="" preload="auto"></audio>
+      <audio id="cat-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/cat-sound-1.wav?v=1737033499056" preload="auto"></audio>
       
       <button id="restart-button">X</button>
-      <audio id="restart-sound" src="" preload="auto"></audio>
+      <audio id="restart-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/recycle-sound-1.wav?v=1737034662695" preload="auto"></audio>
       
     </div>
 
@@ -55,9 +55,12 @@
 
     <div class="webring" style="display: flex">
       <footer>
-        <p id="question-mark">?</p>
+        <p id="question-mark"></p>
+        <a href="https://www.lightlearner.lol/" id="arrow-link">
         <p id="arrow-symbol">&#x2192;</p>
+          </a>
       </footer>
     </div>
   </body>
 </html>
+
