--- a/index.html
+++ b/index.html
@@ -28,20 +28,44 @@
       ></audio>
 
       <button id="pig-button">GRIS</button>
-      <audio id="pig-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/pig-sound-1.wav?v=1737032286351" preload="auto"></audio>
+      <audio
+        id="pig-sound"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/pig-sound-1.wav?v=1737032286351"
+        preload="auto"
+      ></audio>
 
       <button id="horse-button">HÄST</button>
-      <audio id="horse-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/horse-sound-1.wav?v=1737033494558" preload="auto"></audio>
+      <audio
+        id="horse-sound"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/horse-sound-1.wav?v=1737033494558"
+        preload="auto"
+      ></audio>
 
       <button id="chicken-button">HÖNA</button>
-      <audio id="chicken-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/chicken-sound-1.wav?v=1737033497062" preload="auto"></audio>
+      <audio
+        id="chicken-sound"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/chicken-sound-1.wav?v=1737033497062"
+        preload="auto"
+      ></audio>
 
       <button id="cat-button">KATT</button>
-      <audio id="cat-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/cat-sound-1.wav?v=1737033499056" preload="auto"></audio>
-      
-      <button id="restart-button">X</button>
-      <audio id="restart-sound" src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/recycle-sound-1.wav?v=1737034662695" preload="auto"></audio>
-      
+      <audio
+        id="cat-sound"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/cat-sound-1.wav?v=1737033499056"
+        preload="auto"
+      ></audio>
+
+      <button id="restart-button">
+        <img
+          src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/icons8-trash.svg?v=1737036543929"
+          alt="Restart"
+        />
+      </button>
+      <audio
+        id="restart-sound"
+        src="https://cdn.glitch.global/00ffaf65-2464-4b67-80f5-c035446fb0f9/recycle-sound-1.wav?v=1737034662695"
+        preload="auto"
+      ></audio>
     </div>
 
     <div class="head">
@@ -55,12 +79,14 @@
 
     <div class="webring" style="display: flex">
       <footer>
-        <p id="question-mark"></p>
+        <div id="question-mark"></div>
+        <div id="popup-small" class="popup">
+          <p>1 av 4 Stadsbarn har aldrig sett ett bondgårdsdjur.</p>
+        </div>
         <a href="https://www.lightlearner.lol/" id="arrow-link">
-        <p id="arrow-symbol">&#x2192;</p>
-          </a>
+          <p id="arrow-symbol">&#x2192;</p>
+        </a>
       </footer>
     </div>
   </body>
 </html>
-
